no albumart z-index (hover fix needed)

--- a/public/css/component.sass
+++ b/public/css/component.sass
@@ -13,7 +13,6 @@
   @extend .width-container
 
   padding: 0
-  z-index: 100
 
 .song
   @extend %card
@@ -29,14 +28,12 @@
 
     float: left
     position: relative
-    z-index: 1000 // (float mans)
 
     transform-origin: left top
     transition: transform 100ms ease, z-index 100ms cubic-bezier(1, 0, 1, 0)
 
     &:hover, &:active
       transform: scale(1.75)
-      z-index: 1001
       transition: transform 100ms ease, z-index 100ms cubic-bezier(1, 0, 1, 0)
 
   //-webkit-clip-path: polygon(1% 1%, 99% 1%, 99% 99%, 1% 99%)
@@ -48,6 +45,7 @@
     height: $column-top-height
 
     float: left
+    overflow: hidden
 
     border-bottom: 0.1rem solid $card-border-color
 
@@ -91,6 +89,7 @@
     height: $column-bottom-height
 
     float: left
+    overflow: hidden
 
     > *
       line-height: 1.75rem
